# brewfile-to-ansible

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  brewfile_converter.py  pyproject.toml
.githooks/: commit-msg
brewfile_converter/: __init__.py  __main__.py  cli.py  generator.py  models.py  normalize.py  parser.py  utils.py
brewfile_converter/templates/: ansible_playbook.yml.j2
templates/: ansible_playbook.yml.j2
tests/: test_cli.py  test_generator.py  test_normalization.py  test_parser.py  test_parser_variants.py  test_utils.py
tests/fixtures/brewfiles/: complex.Brewfile  strict_failure.Brewfile
